--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@
     background-repeat: no-repeat;
     background-color: #121214;
 } 
- body */{ 
-    font-family: "Inter", sans-serif; 
+ body *{ 
+    font-family: 'Inter', sans-serif; 
     line-height: 160%;
  }  
   
@@ -59,7 +59,7 @@ main{
 section{  
     color: white;  
     background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%); 
-    padding: 4px; 
+    padding-top:  4px; 
     border-radius: 10px;
 } 
   
